Forward port Pixel framework for Android 14 QPR1
cc: hydrangea, rmp
Change-Id: I35fe3941442decce4dbc464bdb985fe79e072e7d
Signed-off-by: minaripenguin <minaripenguin@users.noreply.github.com>